--- a/TSP/data/datastore.db.properties
+++ b/TSP/data/datastore.db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Thu Feb 08 10:24:55 CET 2018
+#Fri Feb 09 07:46:28 CET 2018
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
